crates/cosmon-cli/tests/snapshots/help__scheduler_validate.snap
---
source: crates/cosmon-cli/tests/help_goldens.rs
expression: stdout
---
Lint `patrols.toml` without firing anything — the safe pre-flight when adding or editing a patrol (success criterion (i) of the autopilot primitive). Zero side-effects: no state read, no dispatch, no kill-switch touch. Exits 0 when the file parses and validates, 1 otherwise — so it doubles as a CI gate. Mirrors `cosmon-scheduler validate`

Usage: cs scheduler validate [OPTIONS]

Options:
      --config <PATH>  Path to the patrol config TOML to lint
  -v, --verbose        Enable verbose output
      --json           Output in JSON format
  -h, --help           Print help
