crates/cosmon-cli/tests/snapshots/help__session_start.snap
---
source: crates/cosmon-cli/tests/help_goldens.rs
expression: stdout
---
Start a new session

Usage: cs session start [OPTIONS]

Options:
      --config <PATH>    Path to configuration file
      --galaxy <GALAXY>  Galaxy this session belongs to (free-form label)
      --root <MOL_ID>    Root molecule(s) this session is anchored on (repeatable)
  -v, --verbose          Enable verbose output
      --json             Output in JSON format
  -h, --help             Print help
