crates/cosmon-cli/tests/snapshots/help__sessions.snap
---
source: crates/cosmon-cli/tests/help_goldens.rs
expression: stdout
---
Two agent sessions — a Claude and a Codex, or two of either — work the same
mission on this machine. One holds the controls and may change the mission;
the other reads the same material, compares, and advises, and can change
nothing. Both see each other, can write to each other, and leave a hand-over
note when they stop, so the next session resumes without re-reading the
whole conversation.

Passing the controls is never automatic. A session may ASK for them; only
you, the human, hand them over, by signing the request with your key. No
quota, timeout or heuristic moves them.

The verbs come in the order you meet them: find a session (discover, show),
take a seat (attach, list, peers), talk (send, inbox), hand over (checkpoint,
drift, takeover). `hook` wires the routine ones into the agent itself, so
they happen without being typed.

Both seats are live sessions of the SAME mission, and only a human signature
moves the controls between them. For separate molecules — each with its own
lifecycle, visible in `cs peek` and harvested on its own — exchanging bounded
findings instead, see `cs work` (ADR-182).

Usage: cs sessions [OPTIONS] <COMMAND>

Commands:
  discover    Which agent conversations exist on this machine, and the exact name to refer to one by
  list        Which of them have taken a seat, and in which role
  show        Look inside one conversation — its last events, read-only
  attach      Take a seat: say "I am here, in this role". Until you do, the others cannot see you
  peers       Who is seated around this session, and which way each one faces
  send        Write one message to another session. Delivered, and consumed, once
  inbox       Read the messages addressed to this session (`--peek` to look without consuming them)
  checkpoint  Leave — or read — the note that lets someone else resume this mission
  drift       Compare what two sessions concluded — `AGREE`, `FINDING` or `INCONCLUSIVE`, never a score
  takeover    The controls: who may change the mission, who asked for them, and the signature that hands them over
  hook        Wire the routine gestures — take a seat, read the mailbox, leave a note — into the agent itself, so they happen without being typed

Options:
      --config <PATH>
          Path to configuration file

  -v, --verbose
          Enable verbose output

      --json
          Output in JSON format

  -h, --help
          Print help (see a summary with '-h')

EXAMPLES:
  cs sessions discover                         # provider sessions in this repo
  cs sessions discover --all --provider codex  # every Codex session on the host
  cs sessions show claude:4940f28e --tail 5    # one session, named exactly
  cs sessions attach --role copilot --follow claude-sid \
      --as codex:0198aabb --capability observe
  cs sessions list --role primary              # who holds a seat
  cs sessions peers                            # who is around me, and which way
  cs sessions send --to claude-sid --message 'that evidence ref is circular'
  cs sessions inbox                            # read and consume; --peek to look

HAND-OVER:
  cs sessions checkpoint publish --mission task-20260731-e4d0 \
      --include 'the cockpit' --exclude 'the probe' \
      --next 'merge-strategy:deny=do not merge before the doc gate' \
      --evidence 'merge-strategy=docs/adr/168.md'
  cs sessions checkpoint list --mission task-20260731-e4d0
  cs sessions drift claude-sid codex-sid --mission task-20260731-e4d0
  cs sessions takeover show    --mission task-20260731-e4d0
  cs sessions takeover trust                   # which key may seat a pilot
  cs sessions takeover request --mission task-20260731-e4d0 --reason 'quota'

THE OPERATOR GESTURE (the part an agent cannot type for itself):
  cs sessions takeover challenge --mission task-20260731-e4d0 --request req-… --by emmanuel > takeover.txt
  minisign -Sm takeover.txt                    # your passphrase, your gesture
  cs sessions takeover grant --mission task-20260731-e4d0 --request req-… --by emmanuel --attestation takeover.txt.minisig

`--by` is a label; the signature is the authority. A grant with no valid
attestation seats nobody — including one appended straight into the ledger,
because every line is checked when it is *read*. Pin the public key at
`.cosmon/takeover.pub` and commit it, so a swapped trust root is a diff.

WITHOUT TYPING ANYTHING (the hook, mission M6):
  cs sessions hook install --provider claude   # .claude/settings.local.json
  cs sessions hook install --provider codex    # ~/.codex/config.toml notify
  cs sessions hook status                      # wired? and what has it cost
  cs sessions checkpoint stage --mission task-20260731-0d49 \
      --next 'gate:affirm=run just gates before done'
  cs sessions hook uninstall --provider claude # leaves no residue
  COSMON_COPILOT_HOOK_OFF=1                    # quiet now, still wired

The hook pings presence, drains the mailbox where the pilot can read it
and publishes a *staged* checkpoint at a transition. It never claims a
seat and never writes a checkpoint's content: a hand-over record is the
pilot's own words, and only its moment is the hook's.

The canonical name of a session is `<provider>:<native-session-id>`, and
nothing else ever breaks a tie: a title, a cwd and a modification time
help you recognise a session, never choose one. A selector that matches
zero or two sessions prints the candidates and refuses.

Exit codes (`drift`, matching `cs diverge`):
  0    AGREE — the compared positions match
  1    FINDING — a decidable test fired, both sides cited
  2    INCONCLUSIVE — not comparable; never rendered as agreement

Authority is a lease with an epoch (ADR-168 §D6). A co-pilot may
observe, message and checkpoint; only the operator grants the controls,
and no quota reading transfers them.

SEE ALSO: cs presence (the substrate), cs journal (operator carnet),
cs pilot (cognitive REPL), cs diverge.
